Bug 401666 - Discover window freezes after it's opening when internet connection is absent
Summary: Discover window freezes after it's opening when internet connection is absent
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 401609 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-02 17:59 UTC by Alexander Mentyu
Modified: 2022-10-13 16:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.1
Sentry Crash Report:


Attachments
Discover backtrace after launch when internet connection is absent (24.02 KB, text/plain)
2018-12-03 17:17 UTC, Alexander Mentyu
Details
gdp output (6.72 KB, text/plain)
2018-12-06 00:15 UTC, olcay seker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-12-02 17:59:01 UTC
STEPS TO REPRODUCE
1. Turn off internet connection.
2. Open Discover.

OBSERVED RESULT
Discover window becomes not responding

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-39-generic
Comment 1 Aleix Pol 2018-12-03 15:37:11 UTC
Can you provide a backtrace? I cannot reproduce on master.

If you need help with how to provide one please tell me.
Comment 2 Alexander Mentyu 2018-12-03 16:02:42 UTC
(In reply to Aleix Pol from comment #1)
> If you need help with how to provide one please tell me.

Yes, what is the quickest method to provide the required backtrace?
Comment 3 Aleix Pol 2018-12-03 16:20:33 UTC
on a terminal:

gdb plasma-discover
run
# you make it freeze, then press ctrl+C when it's frozen
thread apply all bt
# this will output the backtrace which you can copy and paste in here.
Comment 4 Alexander Mentyu 2018-12-03 17:17:26 UTC
Created attachment 116655 [details]
Discover backtrace after launch when internet connection is absent
Comment 5 Alexander Mentyu 2018-12-03 17:18:02 UTC
Added bt
Comment 6 Aleix Pol 2018-12-04 23:33:26 UTC
*** Bug 401609 has been marked as a duplicate of this bug. ***
Comment 7 Aleix Pol 2018-12-05 11:49:13 UTC
Can you install libkf5kirigami2-5-dbgsym and qml-module-org-kde-kirigami2-dbgsym?
They will help to generate a more useful backtrace.

Can't really see a culprit there :/
Comment 8 Alexander Mentyu 2018-12-05 20:50:35 UTC
Currently it not hangs in GDB session and 'unhangs' after ~30sec in normal launch, also 'Application Addons' left page isn't visible after normal launch
Comment 9 olcay seker 2018-12-06 00:15:36 UTC
Created attachment 116706 [details]
gdp output
Comment 10 olcay seker 2018-12-06 00:18:45 UTC
Comment on attachment 116706 [details]
gdp output

I dont think my issue is duplicate but alas. I installed libkf5kirigami2-5-dbgsym and qml-module-org-kde-kirigami2-dbgsym but couldnt generate backtrace. I am open to any other suggestions to generate convenient output.
Comment 11 Patrick Silva 2019-02-23 21:38:21 UTC
Here discover freezes when I click any part of its window if the internet connection was offline on opening.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.1
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 12 Aleix Pol 2022-10-13 15:45:18 UTC
Git commit b704933b2d8cf92c8b6bf552f1ee4c1f817850d9 by Aleix Pol.
Committed on 13/10/2022 at 15:40.
Pushed by apol into branch 'master'.

Delay subCategoriesChanged signals when disabling

They can trigger a lot of JS code that induce lockups
Related: bug 457408

M  +17   -2    libdiscover/Category/Category.cpp
M  +2    -0    libdiscover/Category/Category.h

https://invent.kde.org/plasma/discover/commit/b704933b2d8cf92c8b6bf552f1ee4c1f817850d9
Comment 13 Aleix Pol 2022-10-13 15:47:47 UTC
Git commit a3dd72f42c92c9a7077164697e5e9b0badf518b4 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 13/10/2022 at 15:47.
Pushed by apol into branch 'Plasma/5.26'.

Delay subCategoriesChanged signals when disabling

They can trigger a lot of JS code that induce lockups
Related: bug 457408


(cherry picked from commit b704933b2d8cf92c8b6bf552f1ee4c1f817850d9)

M  +17   -2    libdiscover/Category/Category.cpp
M  +2    -0    libdiscover/Category/Category.h

https://invent.kde.org/plasma/discover/commit/a3dd72f42c92c9a7077164697e5e9b0badf518b4