Delay subCategoriesChanged signals when disabling

They can trigger a lot of JS code that induce lockups

BUG: 401666
BUG: 457408


(cherry picked from commit b704933b2d8cf92c8b6bf552f1ee4c1f817850d9)